--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-*.js linguist-language=java
-*.css linguist-language=java
-*.html linguist-language=java
+*.js linguist-language=chinese
+*.css linguist-language=chinese
+*.html linguist-language=chinese
